# cocoon

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: server.go
boost-http/: http-client.cpp  http-client.h  http.cpp  http.h  www-form-urlencoded.cpp  www-form-urlencoded.h
docs/: amd-tee.md  architecture.md  deployment.md  ra-tls.md  seal-keys.md  smart-contracts.md
mt-tools/: mt  pyproject.toml
mt-tools/scripts/: run_sglang.py
mt-tools/src/mt/cli/: __init__.py  benchmark.py  eval.py  run.py
mt-tools/src/mt/tasks/: __init__.py
net/: TcpClient.cpp  TcpClient.h  TcpClient.hpp  TcpConnection.cpp  TcpConnection.hpp
reprodebian/: fetch-deps.sh  mkosi.build  mkosi.conf  mkosi.postinst  mkosi.prepare
reprodebian/checksums/: cuda.sha256
reprodebian/cocoon-init/: cocoon-cert-refresh.service  cocoon-cert-refresh.timer  cocoon-init  cocoon-init-common  cocoon-init-sev  cocoon-init-tdx  cocoon-render-config  cocoon-sev-pki-update.service  cocoon-sev-pki-update.timer  sev-pki-update
reprodebian/pkg-aux/: modules.allowlist  rules.v4
runners/: BaseRunner.cpp  BaseRunner.hpp  ClientRunner.cpp  EncryptMessage.cpp  KeyManagerRunner.cpp  ProxyRunner.cpp  WorkerRunner.cpp
runners/client/: ClientProxyConnection.cpp  ClientProxyConnection.h  ClientRunner.cpp  ClientRunner.hpp  ClientRunningRequest.cpp  ClientRunningRequest.h
runners/helpers/: ValidateRequest.cpp  ValidateRequest.h
runners/key-manager/: KeyManagerRunner.cpp  KeyManagerRunner.hpp
scripts/: build-image  build-model  cocoon-launch  key-manager.conf  prepare-release
tee/: CMakeLists.txt
(+100 files in other folders)
